# llama.cpp

./: .gitignore  CMakeLists.txt  Makefile  __Investigate_ggml_vec_max_f32.txt  __Investigate_ggml_vec_scale_f32.txt  __Potential_PR__.txt  __README__Xbox.md  __readme__.txt  convert-bitnet.py  convert-hf-to-gguf.py  ggml-backend.c  ggml-common.h  ggml-impl.h  ggml-quants.c  ggml-quants.h  ggml-tmac.cpp  ggml.c  ggml.h  ggml.openmp.c  iqk_mul_mat.cpp  llama.cpp  llama.h
__save/: __readme__.txt  common.cpp  common.h  examples_CMakeLists.txt  llama.cpp
__save/batchslm/: CMakeLists.txt  batchslm.cpp
bench/: fusionai9.txt
common/: common.cpp  common.h
examples/: CMakeLists.txt
examples/bZM/: CMakeLists.txt
examples/batchslm/: batchslm.cpp
examples/eval-callback/: eval-callback.cpp
examples/frotz/: CMakeLists.txt  djfrotz.h  djinit.c  djinput.c  djmouse.c  djpic.c  djsample.c  djscreen.c  djtext.c  fontdata.h  frotz.h  makefile.dj  readme.dj
examples/kv-cache/: CMakeLists.txt  kv-cache.cpp  kv-cache.h  kv-test.cpp  slminfer.cpp
examples/llama-bench/: llama-bench.cpp
examples/llama-bench/dot/: llama-bench_q2-dc.txt  llama-bench_q2-iqk.txt  llama-bench_q2_p1-iqk.txt  llama-bench_q4-dc.txt  llama-bench_q4-iqk.txt  llama-bench_q8-dc.txt  llama-bench_q8-iqk.txt
examples/main/: main.cpp
examples/mjZ/: CMakeLists.txt  minZ.c
examples/perfavx/: CMakeLists.txt  perfavx.c
ggml-cuda/: mmq.cuh
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
tests/: CMakeLists.txt
